# test_smit

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rates.json
app/: main.py  utils.py
app/api/: rates.py
app/core/: config.py
app/services/database/models/: __init__.py  rates.py
app/services/database/schemas/: rates.py
migrations/models/: 0_20230716204559_init.py  1_20230716205744_add_unique.py
